# claude-code-notify

./: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/: index.html  renderer.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
