[package]
name = "claude-notify-app"
version = "3.0.0"
edition = "2021"

[lib]
name = "claude_notify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "claude-notify-app"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
